--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
         <a class="link-button" href="https://web.programming-hero.com/"> Hire me</a></div>
         
     <div class="half-width"><img src="portfolio.png" alt=""></div></section>
+    <section class="dream Big">
+        <div class="half-width">
+           <img src="portfolio.png" alt="">
+        </div>
+        <div class="half-width">
+         <h2>DREAM BIG</h2>
+         <h3>Become a web Developer</h3>
+         <p>Web developing is so peramoy.Web developing is so peramoy.Web developing is so peramoy.Web developing is so peramoy.Web developing is so peramoy.Web developing is so peramoy.Web developing is so peramoy.Web developing is so peramoy.Web developing is so peramoy.</p> 
+         <a class="link-button" href=" ">DOWNLOAD RESUME</a> 
+        </div>
+
+    </section>
     
 </body>
 </html>
