footer and experience

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section><div class="half-width"><h1>WELCOME TO</h1>
+    <section class="top banner flexible-container"><div class="half-width"><h1>WELCOME TO</h1>
         <h1><span class="orrange">BADHON</span> WORLD!! </h1>
         <h3>Web Developer</h3>
         <p>HEY !!!I am Badhon.I am professional in web developing.HEY !!!I am Badhon.I am professional in web developing.HEY !!!I am Badhon.I am professional in web developing.HEY !!!I am Badhon.I am professional in web developing.HEY !!!I am Badhon.I am professional in web developing.HEY !!!I am Badhon.I am professional in web developing.HEY !!!I am Badhon.I am professional in web developing. </p>
         <a class="link-button" href="https://web.programming-hero.com/"> Hire me</a></div>
         
     <div class="half-width"><img src="portfolio.png" alt=""></div></section>
-    <section class="dream Big">
+    <section class="dream Big flexible-container">
         <div class="half-width">
            <img src="portfolio.png" alt="">
         </div>
@@ -27,6 +27,26 @@
         </div>
 
     </section>
-    
+    <section class="Experience area">
+        <h1>Experiences</h1>
+        <div class="flexible-container" >
+            <div id="full-stack" class="Experience-item">
+            <h1>Full stack developer</h1>
+            <h3 class="orrange">2020-present|pro level developer</h3>
+            <p>Today’s web page developer landscape is full of innovative projects and intelligent people. Together, these factors push the industry forward at amazing speeds, while also making it more difficult for individual web developers to be outstanding.</p>
+
+
+        </div>
+        <div id="baby" class="Experience-item">
+            <h1>Baby web developer</h1>
+            <h3 class="orrange">2022-2022|hero learner developer</h3>
+            <p>Some developers find web-based portfolios to be redundant, mostly because today there are a number of quicker, easier ways to share your work and gain the desired recognition. You could use Twitter, Dribble, dev.to, and GitHub to name a few of the more useful.</p>
+        </div></div>
+
+
+    </section>
+    <footer>
+        <p>programming-hero.programming-hero.</p>
+    </footer>
 </body>
 </html>
